<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:padding="8dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/please_enter_your_details"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/full_name"
            android:textColor="@color/greenPrimary"
            android:textColorHint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/email_address"
            android:textColor="@color/greenPrimary"
            android:textColorHint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/password"
            android:textColor="@color/greenPrimary"

            android:textColorHint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordRegister"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account_sign_in_now"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>