<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/please_enter_post_details"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivMealPost"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/meal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_the_photo_to_open_gallery"
            android:textAlignment="center"
            android:textColor="#BCBCBC"
            android:translationZ="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/meal_name"
            android:textColor="@color/greenPrimary"
            android:textColorHint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/enter_your_comment_content"
            android:textColor="@color/greenPrimary"

            android:textColorHint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSharePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/share_post"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>